Fixing z-index for dice

--- a/src/sass/sections/_dice.scss
+++ b/src/sass/sections/_dice.scss
@@ -9,6 +9,7 @@
     width: 100px;
     height: 100px;
     transform-style: preserve-3d;
+    z-index: 0;
     transition: 1s ease;
 }
 
